--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,160 +1,15 @@
-<section class="hero">
-  <header>
-    <div class="wrapper">
-      <a href="#"><img src="img/logo.png" class="logo" alt="" titl=""/></a>
-      <a href="#" class="hamburger"></a>
-      <nav>
-        <ul>
-          <li><a href="#">Accueil</a></li>
-          <li><a href="#">Top</a></li>
-          <li><a href="#">Flop</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <a href="#" class="login_btn">Login</a>
-      </nav>
-    </div>
-  </header><!--  end header section  -->
-
-    <section class="caption">
-      <h2 class="caption">Find You Dream Home</h2>
-      <h3 class="properties">Appartements - Houses - Mansions</h3>
-    </section>
-</section><!--  end hero section  -->
-
-
-<section class="flag">
-  <div class="wrapper">
-    <h2><a type="text" id="search" name="search" placeholder="Coup de coeur" >Coup de coeur</a></h2>
-  </div><!--  end advanced search section  -->
-</section><!--  end search section  -->
-
-
-<section class="listings">
-  <div class="wrapper">
-    <ul class="properties_list">
-      <li>
-          <img src="img/le_bon_coin000.jpg" alt="" title="" class="property_img"/>
-
-        <span class="price">200€</span>
-        <div class="property_details">
-          <h1>
-            <a href="#">Rober de mariée</a>
-          </h1>
-          <h2>Belle robe à vendre... </h2>
-        </div>
-      </li>
-      <li>
-          <img src="img/le_bon_coin000.jpg" alt="" title="" class="property_img"/>
-
-        <span class="price">100€</span>
-        <div class="property_details">
-          <h1>
-            <a href="#">Cercueil</a>
-          </h1>
-          <h2>Cercueil jamais utilisé... </h2>
-        </div>
-      </li>
-      <li>
-        <a href="#">
-          <img src="img/le_bon_coin000.jpg" alt="" title="" class="property_img"/>
-        </a>
-        <span class="price">1200€</span>
-        <div class="property_details">
-          <h1>
-            <a href="#">Voiture</a>
-          </h1>
-          <h2>Design pour tuning... </h2>
-        </div>
-      </li>
-      <li>
-        <a href="#">
-          <img src="img/leboncoin000.jpg" alt="" title="" class="property_img"/>
-        </a>
-        <span class="price">150€</span>
-        <div class="property_details">
-          <h1>
-            <a href="#">Vieille cuvette</a>
-          </h1>
-          <h2>Cuvette pour les besoins gardant la méthode traditionnelle...</h2>
-        </div>
-      </li>
-      <li>
-        <a href="#">
-          <img src="img/le_bon_coin000.jpg" alt="" title="" class="property_img"/>
-        </a>
-        <span class="price">0€</span>
-        <div class="property_details">
-          <h1>
-            <a href="#">Recherche d'un colo</a>
-          </h1>
-          <h2>Une place disponible pour un(e) futur colocataire (trice)... </h2>
-        </div>
-      </li>
-      <li>
-        <a href="#">
-          <img src="..app/img/le_bon_coin000.jpg" alt="" title="" class="property_img"/>
-        </a>
-        <span class="price">0€</span>
-        <div class="property_details">
-          <h1>
-            <a href="#">Test</a>
-          </h1>
-          <h2>Pour test ça n'a pas un prix... </h2>
-        </div>
-      </li>
-
-    </ul>
-    <div class="more_listing">
-      <a href="#" class="more_listing_btn">Voir plus</a>
-    </div>
-  </div>
-</section>	<!--  end listing section  -->
-
-<footer>
-  <div class="wrapper footer">
-    <ul>
-      <li class="links">
-        <ul>
-          <li><a href="#">Accueil</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Top</a></li>
-          <li><a href="#">Flop</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </li>
-
-      <li class="links">
-        <ul>
-          <li><a href="#">Paris</a></li>
-          <li><a href="#">Lyon</a></li>
-          <li><a href="#">Nantes</a></li>
-          <li><a href="#">Bordeaux</a></li>
-          <li><a href="#">...</a></li>
-        </ul>
-      </li>
-
-      <li class="links">
-        <ul>
-          <li><a href="#">Technologies</a></li>
-          <li><a href="#">Logements</a></li>
-          <li><a href="#">Automobiles</a></li>
-          <li><a href="#">Travail</a></li>
-          <li><a href="#">...</a></li>
-        </ul>
-      </li>
-
-      <li class="about">	<ul>
-          <li><a href="#" class="facebook" target="_blank"></a></li>
-          <li><a href="#" class="twitter" target="_blank"></a></li>
-          <li><a href="#" class="google" target="_blank"></a></li>
-          <li><a href="#" class="skype"></a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-
-  <div class="copyrights wrapper">
-    Copyright © 2015 <a href="http://localhost:4200/login" target="_blank" class="ph_link" title="Download more free Templates">LeMauvaisCoinFront</a>. All Rights Reserved.
-  </div>
-</footer>
+<mat-grid-list cols="3" [rowHeight]="250">
+  <mat-grid-tile *ngFor="let offer of offers$ | async">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>{{offer.title}}</mat-card-title>
+        <mat-card-subtitle>{{offer.price}} €</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          {{offer.description}}
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
