--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,6 +11,9 @@
           {{offer.description}}
         </p>
       </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="deleteOffer(offer.id)" disabled="true">delete</button>
+      </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
 </mat-grid-list>
